@@ -7,7 +7,6 @@ import nl.rijksoverheid.mev.gezagsmodule.domain.Persoonslijst;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
 
 public class IsErSprakeVanEenRecenteGebeurtenis extends GezagVraag {
 
@@ -16,7 +15,6 @@ public class IsErSprakeVanEenRecenteGebeurtenis extends GezagVraag {
     private static final String INDICATIE_GEZAG_BEIDE_OUDERS = "12";
     private static final String INDICATIE_GEZAG_OUDER1 = "1";
     private static final String INDICATIE_GEZAG_OUDER2 = "2";
-    private static final String STANDAARD_WAARDE_INGANGSDATUM_GELDIGHEID_GEZAG = "00000000";
 
     protected IsErSprakeVanEenRecenteGebeurtenis(final GezagBepaling gezagBepaling) {
         super(gezagBepaling);
@@ -25,45 +23,46 @@ public class IsErSprakeVanEenRecenteGebeurtenis extends GezagVraag {
 
     /**
      * v3.1
-     *
-     * @return Ja, als er sprake is van een recente gebeurtenis anders Nee
+     *<p>
+     * Ja, als er sprake is van een recente gebeurtenis anders Nee
      */
     @Override
     public void perform() {
         Persoonslijst plPersoon = gezagBepaling.getPlPersoon();
         Gezagsverhouding gezagsverhouding = plPersoon.getGezagsverhouding();
-        if (gezagsverhouding != null) {
-            String indicatieGezagMinderjarige = gezagsverhouding.getIndicatieGezagMinderjarige();
-            String ingangsdatumGeldigheidGezag = gezagsverhouding.getIngangsdatumGeldigheidGezag();
-            // Check voor ontkenning erkenning, als er niet erkend is, dan is er sprake van ontkenning erkenning
-            if ((indicatieGezagMinderjarige.equals(INDICATIE_GEZAG_BEIDE_OUDERS)) && (!plPersoon.heeftTweeOuders())) {
-                answer = V3_1_JA;
-            }
-            // Preconditie ingangsdatum geldigheid gezag moet een geldige datum zijn en niet de standaard waarde
-            if (Objects.equals(ingangsdatumGeldigheidGezag, STANDAARD_WAARDE_INGANGSDATUM_GELDIGHEID_GEZAG)) {
-                throw new AfleidingsregelException("Preconditie: Ingangsdatum geldigheid gezag moet een valide datum bevatten", "Ingangsdatum geldigheid gezag");
-            }
-            // Controleer op adoptie na uitspraak gezag, als adoptie heeft plaatsgevonden na de uitspraak
-            // dan is er sprake van een recente gebeurtenis
-            if (plPersoon.adoptieNaIngangsGeldigheidsdatum()) {
-                answer = V3_1_JA;
-            }
-            // Controleer op reparatiehuwelijk alleen als gezag aan een van de ouders is toegewezen
-            // In geval van een reparatiehuwelijk na ingangsdatum is er sprake van een recente gebeurtenis
-            if ((indicatieGezagMinderjarige.equals(INDICATIE_GEZAG_OUDER1) || indicatieGezagMinderjarige.equals(INDICATIE_GEZAG_OUDER2))
-                && plPersoon.heeftTweeOuders() && plPersoon.beideOudersHebbenEenBSN()) {
-                Persoonslijst lplOuder1 = gezagBepaling.getPlOuder1();
-                Persoonslijst lplOuder2 = gezagBepaling.getPlOuder2();
-                if (nuGehuwdOudersNaGeldigheidsdatum(lplOuder1, lplOuder2, ingangsdatumGeldigheidGezag)) {
-                    answer = V3_1_JA;
-                }
-            }
-
-            if (answer == null) {
-                answer = V3_1_NEE;
-            }
-        } else {
+        if (gezagsverhouding == null) {
             gezagBepaling.addMissendeGegegevens("gezagsverhouding van bevraagde persoon");
+            return;
+        }
+
+        String indicatieGezagMinderjarige = gezagsverhouding.getIndicatieGezagMinderjarige();
+        String ingangsdatumGeldigheidGezag = gezagsverhouding.getIngangsdatumGeldigheidGezag();
+        // Check voor ontkenning erkenning, als er niet erkend is, dan is er sprake van ontkenning erkenning
+        if ((indicatieGezagMinderjarige.equals(INDICATIE_GEZAG_BEIDE_OUDERS)) && (!plPersoon.heeftTweeOuders())) {
+            answer = V3_1_JA;
+        }
+
+        if (!gezagsverhouding.hasIngangsdatumGeldigheidGezag()) {
+            throw new AfleidingsregelException("Preconditie: Ingangsdatum geldigheid gezag moet een valide datum bevatten", "ingangsdatum geldigheid van gezagsverhouding");
+        }
+        // Controleer op adoptie na uitspraak gezag, als adoptie heeft plaatsgevonden na de uitspraak
+        // dan is er sprake van een recente gebeurtenis
+        if (plPersoon.adoptieNaIngangGeldigheidsdatum()) {
+            answer = V3_1_JA;
+        }
+        // Controleer op reparatiehuwelijk alleen als gezag aan een van de ouders is toegewezen
+        // In geval van een reparatiehuwelijk na ingangsdatum is er sprake van een recente gebeurtenis
+        if ((indicatieGezagMinderjarige.equals(INDICATIE_GEZAG_OUDER1) || indicatieGezagMinderjarige.equals(INDICATIE_GEZAG_OUDER2))
+            && plPersoon.heeftTweeOuders() && plPersoon.beideOudersHebbenEenBSN()) {
+            Persoonslijst lplOuder1 = gezagBepaling.getPlOuder1();
+            Persoonslijst lplOuder2 = gezagBepaling.getPlOuder2();
+            if (nuGehuwdOudersNaGeldigheidsdatum(lplOuder1, lplOuder2, ingangsdatumGeldigheidGezag)) {
+                answer = V3_1_JA;
+            }
+        }
+
+        if (answer == null) {
+            answer = V3_1_NEE;
         }
 
         gezagBepaling.getArAntwoordenModel().setV0301(answer);
@@ -78,8 +77,8 @@ public class IsErSprakeVanEenRecenteGebeurtenis extends GezagVraag {
         if (hopListOuder1.isEmpty() || hopListOuder2.isEmpty()) {
             return false;
         }
-        String hopOuder1Actueel = hopListOuder1.get(0).getDatumVoltrokken();
-        String hopOuder2Actueel = hopListOuder2.get(0).getDatumVoltrokken();
+        String hopOuder1Actueel = hopListOuder1.getFirst().getDatumVoltrokken();
+        String hopOuder2Actueel = hopListOuder2.getFirst().getDatumVoltrokken();
         return (org.apache.commons.lang3.StringUtils.isNotBlank(hopOuder1Actueel) && org.apache.commons.lang3.StringUtils.isNotBlank(hopOuder2Actueel))
             && (Integer.parseInt(geldigheidsdatum) <= Integer.parseInt(hopOuder1Actueel))
             && (Integer.parseInt(geldigheidsdatum) <= Integer.parseInt(hopOuder2Actueel))
